--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nextui-org/navbar": "^2.0.27",
     "@nextui-org/react": "^2.2.10",
+    "@prisma/client": "^5.10.2",
+    "@vercel/postgres": "^0.7.2",
     "bootstrap": "^5.3.3",
     "firebase": "^10.8.1",
     "i": "^0.3.7",
@@ -19,7 +21,9 @@
     "react": "^18",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
